# androidhookcardtest

./: DEPLOY.md  HARDENING.md  androidas.keystore  androidas1.keystore  settings.gradle
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/release/: app-release.apk  output-metadata.json
app/release/app-release.apk.cache/: code-version
app/release/app-release.apk.cache/metadata/00/: 00000000.jadxmd  00000100.jadxmd  00000200.jadxmd  00000300.jadxmd  00000400.jadxmd  00000500.jadxmd  00000600.jadxmd  00000700.jadxmd  00000800.jadxmd  00000900.jadxmd  00000a00.jadxmd
app/release/app-release.apk.cache/metadata/01/: 00000001.jadxmd  00000201.jadxmd  00000301.jadxmd  00000401.jadxmd  00000501.jadxmd  00000601.jadxmd  00000701.jadxmd  00000801.jadxmd  00000901.jadxmd  00000a01.jadxmd
app/release/app-release.apk.cache/metadata/02/: 00000002.jadxmd  00000102.jadxmd  (+8 more)
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/assets/: monitor_script.sh  xposed_init
app/src/main/cpp/: CMakeLists.txt  secure.c
card_server/: .env  .env.example  README.md  _deploy.py  package.json  server.js  start.bat
card_server/data/: db.json
card_server/public/: admin.html
gradle/wrapper/: gradle-wrapper.properties
tools/: README.md  gen_blobs.py  inject_sdk.py
win_client/: build.bat  gen_blobs.py
win_client/examples/: use_dll.go  use_dll.py  use_exe.vbs
win_client/src/: blobs.h  c2.h  c2agent.c  c2sdk.c  config.h  device_id.h  http.h  json.h  kami.h  vault.h
(+4825 files in other folders)
